<resources>
    <string name="app_name">绿化进度上报</string>
    <string name="current_people">当前人力:</string>
    <string name="max_people">最高人力:</string>
    <string name="project_start">开工</string>
    <string name="project_cancel">竣工</string>
    <string name="cancellation">注销用户</string>
    <string name="leave">请假申请</string>
    <string name="note">笔记本</string>
    <string name="photo">现场图片</string>
    <string name="video">现场视频</string>
    <string name="safe">安全隐患</string>
    <string name="opinion">工地建议</string>
    <string name="message">通讯录</string>
    <string name="chat">聊天</string>
    <string name="friend">好友</string>
    <string name="group">群聊</string>
    <string name="take_photo">照片上传</string>
    <string name="take_video">视频上传</string>
    <string name="take_sign">签到</string>
    <string name="take_process">进度更新</string>
    <string name="take_safe">隐患上报</string>
    <string name="take_device">设备管理</string>
    <string name="technical"><![CDATA[技术&法规]]></string>
    <string name="scene">工地实况</string>
    <string name="menu">主页</string>
    <string name="account">帐号：</string>
    <string name="password">密码：</string>
    <string name="login">登陆</string>
    <string name="baidu_key">zo2WUtLrjGVX54TmE0ZIwTuxCS0vqI6i</string>
    <string name="weather">天气</string>
    <string name="date">时间：</string>
    <string name="weather_1">天气：</string>
    <string name="pm25">PM2.5:</string>
    <string name="wind">风力：</string>
    <string name="temperture">温度：</string>
    <string name="city">城市：</string>
    <string name="create_group">创建聊天室</string>
    <string name="check_process">进度查看</string>
    <string name="record">小视频录制</string>
    <string name="upload_video">上传小视频</string>
    <string name="record_preview">视频预览</string>
    <string name="re_record">重录</string>
    <string name="video_publish">发布</string>
    <string name="video_description">视频描述:</string>
    <string name="publish_title">视频描述</string>
    <string name="photo_description">照片描述</string>
    <string name="re_photo">重拍</string>
    <string name="photo_preview">照片预览</string>
    <string name="photo_landing">图片正在上传...</string>
    <string name="video_loading">视频正在上传...</string>
    <string name="apply_reason">请假原因:</string>
    <string name="leave_time">请假时间:</string>
    <string name="back_time">返回时间:</string>
    <string name="sumbit_apply">提交申请</string>
    <string name="apply_leave">请假申请</string>
    <string name="leave_status">请假记录</string>
    <string name="leave_success">审核通过</string>
    <string name="leave_waiting">等待审核</string>
    <string name="leave_failure">审核失败</string>
    <string name="process_update">进度上报</string>
    <string name="process_update_success">今日已经更新</string>
    <string name="device_name">设备名称:</string>
    <string name="add_device">添加设备</string>
    <string name="device_owner">管理人员:</string>
    <string name="loading">加载中...</string>
    <string name="note_title">笔记标题:</string>
    <string name="note_content">笔记内容:</string>
    <string name="note_add">添加笔记</string>
    <string name="add_title">添加标题...</string>
    <string name="add_content">添加笔记...</string>
    <string name="add_group">创建群组</string>
    <string name="landing">正在加载...</string>
    <string name="app_login_show">用户名</string>
    <string name="app_login_password">密 码</string>
    <string name="app_sign_in">登录</string>
    <string name="logining">正在登录...</string>
    <string name="personal_center">个人中心</string>
    <string name="modify_sign">修改名称</string>
    <string name="ok">确定</string>
    <string name="modify_age">修改年龄</string>
    <string name="modify_tel">修改年龄</string>
    <string name="suggest">意见反馈</string>
    <string name="write_sth">写下你的建议...</string>
    <string name="safe_upload">隐患上报</string>
    <string name="export_excel">导出Excel表</string>
</resources>
