<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray" />

    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@drawable/tab_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_home"
            android:text="@string/menu" />

        <RadioButton
            android:id="@+id/scene"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_message"
            android:text="@string/scene" />

        <ImageView
            android:id="@+id/image_add"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_add" />

        <RadioButton
            android:id="@+id/message"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_search"
            android:text="@string/message" />

        <RadioButton
            android:id="@+id/technical"
            style="@style/RadioButtonBottomTab"
            android:drawableTop="@drawable/icon_me"
            android:text="@string/technical" />

    </RadioGroup>


</LinearLayout>
