<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xzy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/layout_activity_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray" />

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@drawable/tab_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <xzy.zzia.com.landscaping.view.ChangeColorIconWithText
            android:id="@+id/home"
            style="@style/RadioButtonBottomTab"
            xzy:color_bottom="#ff45c01a"
            xzy:icon_bottom="@drawable/icon_home"
            xzy:text="@string/menu"
            xzy:text_size="12sp" />

        <xzy.zzia.com.landscaping.view.ChangeColorIconWithText
            android:id="@+id/scene"
            style="@style/RadioButtonBottomTab"
            xzy:color_bottom="#ff45c01a"
            xzy:icon_bottom="@drawable/icon_message"
            xzy:text="@string/scene"
            xzy:text_size="12sp" />

        <ImageView
            android:id="@+id/image_add"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_add" />

        <xzy.zzia.com.landscaping.view.ChangeColorIconWithText
            android:id="@+id/message"
            style="@style/RadioButtonBottomTab"
            xzy:color_bottom="#ff45c01a"
            xzy:icon_bottom="@drawable/icon_search"
            xzy:text="@string/message"
            xzy:text_size="12sp" />

        <xzy.zzia.com.landscaping.view.ChangeColorIconWithText
            android:id="@+id/technical"
            style="@style/RadioButtonBottomTab"
            xzy:color_bottom="#ff45c01a"
            xzy:icon_bottom="@drawable/icon_me"
            xzy:text="@string/technical"
            xzy:text_size="12sp" />

    </LinearLayout>


</LinearLayout>
